--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,6 +143,7 @@ input, select, textarea {
 
 		header > p {
 			margin: 1em 0 0 0;
+			color: beige; 
 		}
 
 	footer {
@@ -2207,7 +2208,7 @@ input, select, textarea {
 			margin: 0;
 			overflow: hidden;
 			padding: 4em 0;
-			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
+			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.65), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
 			background-image: url("images/overlay.png");
 		}
@@ -2243,7 +2244,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.png");
+				background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/banner.png);
 			}
 
 			#main > section.two {
